[package]
name = "ecosystemsim"
version = "0.1.0"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "Ecosystem simulator demo"
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/ecosystemsim"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
wasm-bindgen = "0.2"
js-sys = "0.3"
cfg-if = "1.0.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]